Bug 169445 - New Category doesn't show up in the "Select Category" window
Summary: New Category doesn't show up in the "Select Category" window
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: todoview (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-19 17:36 UTC by Ben Aceler
Modified: 2009-03-16 00:56 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Aceler 2008-08-19 17:36:49 UTC
Version:           4.1.0 (using 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)) "release 26.3", KDE:KDE4:Factory:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.11-0.1-pae

The category doesn't show up in the "Select
Categories" window after creating/modify/delete in "Edit Category" window.
Comment 1 Allen Winter 2008-08-22 23:49:04 UTC
I can't reproduce this in trunk.

FiNeX, can you reproduce this?
Comment 2 FiNeX 2008-08-23 11:10:56 UTC
I cannot reproduce it too. The category dialog is correctly reloaded with new categories.
Comment 3 Allen Winter 2008-08-23 14:12:39 UTC
Ok, then closing as "worksforme".

we can reopen if it occurs again.
Comment 4 mario tuling 2008-10-13 17:35:56 UTC
i encounter the bug with recent trunk (r870661). it works in the calendar view. but not in the todo list view:
switch to the todo list.
edit an item.
select categories.
in the new selection window, do edit categories and add a new one for example.
it wont show up in the select categories window.
so i reopen it.
Comment 5 FiNeX 2008-11-06 13:34:50 UTC
Confirmed: it has not been fixed on this view.
Comment 6 Christophe Marin 2008-11-23 02:03:23 UTC
Changing component -> "todoview" (and confirmed w/ 887816)
Comment 7 Sergio Martins 2009-03-16 00:56:11 UTC
SVN commit 939917 by smartins:

When creating or deleting categories they didn't appear immediately in the selection dialog.

BUG: 169445


 M  +2 -0      kotodoeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=939917