When creating or deleting categories they didn't appear immediately in the selection dialog.

BUG: 169445

svn path=/trunk/KDE/kdepim/; revision=939917