kotodoeditor.cpp
@@ -85,6 +85,8 @@ void KOTodoEditor::init()
 
   connect( mGeneral, SIGNAL(openCategoryDialog()),
            SIGNAL(editCategories()) );
+  connect( this, SIGNAL(updateCategoryConfig()),
+           mGeneral, SIGNAL(updateCategoryConfig()) );
 
   connect( mDetails, SIGNAL(updateAttendeeSummary(int)),
            mGeneral, SLOT(updateAttendeeSummary(int)) );
